@@ -47,3 +47,4 @@ Rafael Antognolli <antognolli@profusion.mobi>
 Kim Yunhan <spbear@gmail.com>
 Youness Alaoui <kakaroto@kakaroto.homelinux.net>
 Bluezery <ohpowel@gmail.com>
+Doyoun Kang <wayofmine@gmail.com> <doyoun.kang@samsung.com>
