@@ -8,6 +8,7 @@ static void (*_io_error_func)(void *data) = NULL;
 static void *_io_error_data = NULL;
 static int _error_request_code = 0;
 static int _error_code = 0;
+static Ecore_X_ID _error_resource_id = 0;
 
 /**
  * Set the error handler.
@@ -63,6 +64,18 @@ ecore_x_error_code_get(void)
    return _error_code;
 }
 
+/**
+ * Get the resource id that caused the error.
+ * @return The resource id causing the X error
+ *
+ * Return the X resource id that caused the last X error
+ */
+EAPI Ecore_X_ID
+ecore_x_error_resource_id_get(void)
+{
+   return _error_resource_id;
+}
+
 int
 _ecore_xcb_error_handle(xcb_generic_error_t *err)
 {
@@ -84,6 +97,7 @@ _ecore_xcb_error_handle(xcb_generic_error_t *err)
 
    _error_request_code = err->sequence;
    _error_code = err->error_code;
+   _error_resource_id = err->resource_id;
    if (_error_func)
      _error_func(_error_data);
 
